--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+.app {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr minmax(min-content, 70em) 1fr;
+  grid-template-rows: 1fr max-content 1fr;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
+  width: 90%;
+  max-width: 25em;
+  margin: 0 auto;
+  grid-column: 2/3;
+  grid-row: 2/3;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.form__title {
+  font-weight: 500;
+  word-spacing: .05rem;
+  font-size: 1.6rem;
+}
+
+.form__name {
+  font-size: 1.4rem;
+  font-weight: 300;
+}
+
+.form__text {
   color: white;
+  font-size: 1.1rem;
+  padding: 0 0.5rem;
+  width: 100%;
+  height: 3rem;
+  background-color: #959595;
 }
 
-.App-link {
-  color: #61dafb;
+.form__text::placeholder {
+  color: #ffffff;
+  font-size: 1.1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  font-size: 1.1rem;
+  display: block;
+  width: 100%;
+  height: 3rem;
+}
+
+.mt--small {
+  margin-top: 0.7rem;
+}
+
+.mt {
+  margin-top: 1.4rem;
+}
+
+.mt--big {
+  margin-top: 2.4rem;
+}
+
+.button--cyan {
+  background-color: #50C0C7;
+  color: white;
 }
