--- a/src/features/Gameboard/styles.css
+++ b/src/features/Gameboard/styles.css
@@ -313,6 +313,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    max-height: 663.5px;
   }
 
   .turns__title {
@@ -365,6 +366,10 @@
     grid-row: 2 / 3;
   }
 
+  .card ~ .card {
+    margin-left: 0;
+  }
+
   .info {
     justify-content: space-between;
   }
@@ -390,13 +395,10 @@
 
   .modal {
     background-color: #323232;
-    grid-column: 2 / 4;
-    grid-row: 2 / 4;
     z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: static;
   }
 }
